@@ -92,9 +92,9 @@ public:
 	color3 (const Type & r, const Type & g, const Type & b) :
 		value
 	{
-		math::clamp (r, Type (), Type (1)),
-		math::clamp (g, Type (), Type (1)),
-		math::clamp (b, Type (), Type (1))
+		clamp (r, Type (), Type (1)),
+		clamp (g, Type (), Type (1)),
+		clamp (b, Type (), Type (1))
 	}
 
 	{ }
@@ -118,7 +118,7 @@ public:
 	///  Set red component of this color.
 	void
 	r (const Type & r)
-	{ value [0] = math::clamp (r, Type (), Type (1)); }
+	{ value [0] = clamp (r, Type (), Type (1)); }
 
 	///  Return red component of this color.
 	const Type &
@@ -128,7 +128,7 @@ public:
 	///  Set green component of this color.
 	void
 	g (const Type & g)
-	{ value [1] = math::clamp (g, Type (), Type (1)); }
+	{ value [1] = clamp (g, Type (), Type (1)); }
 
 	///  Return green component of this color.
 	const Type &
@@ -137,7 +137,7 @@ public:
 	///  Set blue component of this color.
 	void
 	b (const Type & b)
-	{ value [2] = math::clamp (b, Type (), Type (1)); }
+	{ value [2] = clamp (b, Type (), Type (1)); }
 
 	///  Return blue component of this color.
 	const Type &
@@ -192,9 +192,9 @@ template <typename Type>
 void
 color3 <Type>::set (const Type & r, const Type & g, const Type & b)
 {
-	value [0] = math::clamp (r, Type (0), Type (1));
-	value [1] = math::clamp (g, Type (0), Type (1));
-	value [2] = math::clamp (b, Type (0), Type (1));
+	value [0] = clamp (r, Type (0), Type (1));
+	value [1] = clamp (g, Type (0), Type (1));
+	value [2] = clamp (b, Type (0), Type (1));
 }
 
 template <typename Type>
@@ -214,7 +214,7 @@ color3 <Type>::setHSV (const Type & h, const Type & s, const Type & v)
 	// H is given on [0, 2 * Pi]. S and V are given on [0, 1].
 	// RGB are each returned on [0, 1].
 
-	Type _v = math::clamp (v, Type (), Type (1));
+	Type _v = clamp (v, Type (), Type (1));
 
 	if (s == 0)
 	{
@@ -223,12 +223,12 @@ color3 <Type>::setHSV (const Type & h, const Type & s, const Type & v)
 		return;
 	}
 
-	Type _s = math::clamp (s, Type (), Type (1));
+	Type _s = clamp (s, Type (), Type (1));
 
-	Type w = math::degree (math::clamp (h, Type (), Type (2 * M_PI))) / 60; // sector 0 to 5
+	Type w = degree (interval (h, Type (), Type (2 * Type (M_PI)))) / 60; // sector 0 to 5
 
 	Type i = std::floor (w);
-	Type f = w - i;                                                         // factorial part of h
+	Type f = w - i;                                                       // factorial part of h
 	Type p = _v * (1 - _s);
 	Type q = _v * (1 - _s * f);
 	Type t = _v * (1 - _s * (1 - f));
@@ -296,17 +296,17 @@ color3 <Type>::getHSV (Type & h, Type & s, Type & v) const
 
 	if (r () == max)
 		h = (g () - b ()) / delta;      // between yellow & magenta
-		
+
 	else if (g () == max)
 		h = 2 + (b () - r ()) / delta;  // between cyan & yellow
-		
+
 	else
 		h = 4 + (r () - g ()) / delta;  // between magenta & cyan
 
-	h *= M_PI / 3;                     // radiants
+	h *= Type (M_PI) / 3;              // radiants
 
 	if (h < 0)
-		h += 2 * M_PI;
+		h += 2 * Type (M_PI);
 }
 
 // Operators:
@@ -335,8 +335,6 @@ template <typename Type>
 color3 <Type>
 clerp (const color3 <Type> & source, const color3 <Type> & destination, const Type & t)
 {
-	static constexpr Type PI2 = 2 * M_PI;
-
 	Type
 	   a_h, a_s, a_v,
 	   b_h, b_s, b_v;
@@ -346,26 +344,59 @@ clerp (const color3 <Type> & source, const color3 <Type> & destination, const Ty
 
 	Type range = std::abs (b_h - a_h);
 
-	if (range <= M_PI)
+	if (range <= Type (M_PI))
 	{
-		return color3 <Type>::HSV (math::lerp (a_h, b_h, t),
-		                           math::lerp (a_s, b_s, t),
-		                           math::lerp (a_v, b_v, t));
+		return color3 <Type>::HSV (lerp (a_h, b_h, t),
+		                           lerp (a_s, b_s, t),
+		                           lerp (a_v, b_v, t));
 	}
 	else
 	{
-		Type step = (PI2 - range) * t;
+		Type step = (Type (M_PI2) - range) * t;
 		Type h    = a_h < b_h ? a_h - step : a_h + step;
 
 		if (h < 0)
-			h += PI2;
+			h += Type (M_PI2);
 
-		else if (h > PI2)
-			h -= PI2;
+		else if (h > Type (M_PI2))
+			h -= Type (M_PI2);
 
 		return color3 <Type>::HSV (h,
-		                           math::lerp (a_s, b_s, t),
-		                           math::lerp (a_v, b_v, t));
+		                           lerp (a_s, b_s, t),
+		                           lerp (a_v, b_v, t));
+	}
+}
+
+template <class Type>
+static
+void
+hsv_lerp (const Type & a_h, const Type & a_s, const Type & a_v,
+          const Type & b_h, const Type & b_s, const Type & b_v,
+          const Type & t,
+          Type & r_h, Type & r_s, Type & r_v)
+{
+	Type range = std::abs (b_h - a_h);
+
+	if (range <= Type (M_PI))
+	{
+		r_h = lerp (a_h, b_h, t);
+		r_s = lerp (a_s, b_s, t);
+		r_v = lerp (a_v, b_v, t);
+	}
+	else
+	{
+		Type step = (Type (M_PI2) - range) * t;
+		Type h    = a_h < b_h ? a_h - step : a_h + step;
+
+		if (h < 0)
+			h += Type (M_PI2);
+
+		else if (h > Type (M_PI2))
+			h -= Type (M_PI2);
+
+		r_h = h;
+		r_s = lerp (a_s, b_s, t);
+		r_v = lerp (a_v, b_v, t);
 	}
 }
 
