@@ -1,3 +1,8 @@
+2013-11-13  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Color4.h:
+	* Color3.h: 
+
 2013-11-12  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Color3.h: 
