@@ -1,3 +1,12 @@
+2013-11-13  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Scene.cpp:
+	* X3DExecutionContext.cpp:
+	* ColorChaser.cpp:
+	* TexCoordChaser2D.h:
+	* CoordinateChaser.cpp:
+	* TexCoordChaser2D.cpp: 
+
 2013-11-12  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ColorChaser.h:
