@@ -1,3 +1,9 @@
+2013-11-13  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* CoordinateDamper.wrl:
+	* CoordinateChaser.wrl: 
+
 2013-11-12  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
